feat: implement HttpOnly for JWT